--- a/rails/all.html
+++ b/rails/all.html
@@ -9,6 +9,7 @@
 <p><code class="copyToClipboard">kill -9 process_id</code></p>
 <h4>Отладка</h4>
 <p><code class="copyToClipboard">byebug</code> - код останова (подключить гем <code>gem 'byebug'</code> в гемфайле).</p>
+<p><code class="copyToClipboard">continue</code> - код продолжения (или exit).</p>
 <p><code class="copyToClipboard">rails c</code> - консоль приложения (после останова в консоли доступны переменные...).</p>
 
 <h3>CRUD (scaffold)</h3>
