--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -78,7 +78,19 @@
 <h3><strong>CSS Format</strong></h3>
 <p> — упаковывает CSS или наоборот в удобочитаемый;</p>
 <h3><strong>Emmet — обязательный плагин</strong></h3>
-<p> не нуждается в комментариях;</p>
+<p><del>не нуждается в комментариях;</del></p>
+<p>Каждый раз, мать его, каждый раз при обновлении Sublime, Emmet перестает работать. Приходится, чтоб его, каждый раз производить пляску с бубном что-бы эта тварь заработала.</p>
+<ol>
+    <li>Удалить Emmet</li>
+    <li>Удалить PyV8</li>
+    <li>
+        Удалить сжатую папку <var>/home/iadfeshchm/.config/sublime-text-3/Installed Packages/0_package_control_loader.sublime-package</var>
+    </li>
+    <li>
+        Установить вручную PyV8 <a href="https://github.com/emmetio/pyv8-binaries#manual-installation">https://github.com/emmetio/pyv8-binaries#manual-installation</a>
+    </li>
+    <li>Установить Emmet</li>
+</ol>
 <h3><strong>PyV8</strong></h3>
 <p>При ручной установке (<a href="https://github.com/emmetio/pyv8-binaries#manual-installation">https://github.com/emmetio/pyv8-binaries#manual-installation</a>) архив необходимо распаковать по пути <code>~/.config/sublime-text-3/Packages/PyV8/...</code> <mark>И!</mark> по пути <code>~/.config/sublime-text-3/Installed Packages/PyV8/...</code>.</p>
 <p>Устанавливается "Почти" автоматически при установке Emmet; (необходим для работы плагина)</p>
