--- a/js/all.html
+++ b/js/all.html
@@ -158,7 +158,14 @@ alert(variable);
 <h2>Строки</h2>
 <h3>Replace</h3>
 <pre class="prettyprint lang-js">newAddressHtml = newAddressHtml.replace(/\?\?newkey\?\?/g, newKey);</pre>
-<h2>Array</h2>
+<h2>Массивы</h2>
+<h3>Перебор массива</h3>
+<h4>forEach((item, i, arr) => {})</h4>
+<pre class="prettyprint lang-js">var arr = ["Яблоко", "Апельсин", "Груша"];
+
+arr.forEach(function(item, i, arr) {
+  alert( i + ": " + item + " (массив:" + arr + ")" );
+});</pre>
 <h3>Найти максимально значение в массив</h3>
 <pre class="prettyprint lang-js">maxKey = Math.max.apply(null, existKey);</pre>
 <h3>Добавление элемента в массив</h3>
