--- a/phpbb3/all.html
+++ b/phpbb3/all.html
@@ -105,6 +105,12 @@ WHERE
 </pre>
 <h2>Пользователь</h2>
 <pre class="prettyprint lang-php">
+if ($user->data['user_id'] == ANONYMOUS) {
+   echo 'Please login!';
+} else {
+   echo 'Thanks for logging in, ' . $user->data['username_clean'];
+}
+
 define('IN_PHPBB', true);
 $phpbb_root_path = (defined('PHPBB_ROOT_PATH')) ? PHPBB_ROOT_PATH : '../';
 $phpEx = substr(strrchr(__FILE__, '.'), 1);
