--- a/theme/header.html
+++ b/theme/header.html
@@ -1,2 +1,3 @@
 <div class="wrapper">
-<!-- we open the `wrapper` element here, but close it in the `footer.html` file -->
+	<p>Информация должна быть: достоверной, полной, своевременной, ценной, понятной, доступной для усвоения, краткой.</p>
+	<!-- we open the `wrapper` element here, but close it in the `footer.html` file -->
