--- a/bash/all.html
+++ b/bash/all.html
@@ -37,7 +37,7 @@
 <ul>
     <li><code>-i</code> - регистронезависимо;</li>
     <li><code>-r</code> - рекурсивно обходя папки;</li>
-    <li><code>--include=*.php</code> - только файлы с шаблоном;</li>
+    <li><code>--include=*.php</code> - только файлы с шаблоном (<code>--include=*.{php,html}</code>).</li>
 </ul>
 <pre class="prettyprint lang-sh">grep 'Hello world' ./example.cpp</pre>
 <p>Регистронезависимо:</p>
