--- a/bower/all.html
+++ b/bower/all.html
@@ -17,14 +17,14 @@ bower -v
 <p><code>bower i jquery#3.1</code> - установка пакета.</p>
 <p><code>bower list</code> - список установленных пакетов.</p>
 <p><code>bower list --path</code> - список путей пакетов.</p>
-<p><code>boewr uninstall jquery</code> - удаление пакета.</p>
+<p><code>bower uninstall jquery</code> - удаление пакета.</p>
 
 <h2>Управление пакетами</h2>
 <p><code>bower init</code> - создание <var>bower.json</var></p>
 <p><code>bower i jquery#3.1 -S</code> (<code>--save</code>) - добавлние пакета в <var>production</var></p>
 <p><code>bower i jquery#3.1 -D</code> (<code>--save-dev</code>) - добавлние пакета в <var>dev</var></p>
-<p><code>boewr uninstall jquery -S</code> (<code>-D</code>) - удаление пакета с указание типа.</p>
-<p><code>boewr update jquery</code> - обновление пакета.</p>
+<p><code>bower uninstall jquery -S</code> (<code>-D</code>) - удаление пакета с указание типа.</p>
+<p><code>bower update jquery</code> - обновление пакета.</p>
 
 <h2>Версии пакетов</h2>
 <p><code>"jquery": "latest"</code> - последняя версия.</p>
