--- a/bash/all.html
+++ b/bash/all.html
@@ -1,7 +1,8 @@
 <h2>Команды</h2>
 <h3>ls</h3>
 <ul>
-    <li><code>-a</code> — выводит список всех файлов каталога, в том числе скрытые файлы. <code>..</code> и <code>.</code> в верхней части списка относятся к каталогу на уровень выше текущего и текущему, соответственно; Переведено из мануала: <q>Не игнорировать записи начинающиеся с .</q></li>
+    <li><code>-A</code> — в том числе файлы начинающиеся с точки;</li>
+    <li><code>-a</code> — в том числе <code>..</code> и <code>.</code> в верхней части списка - относятся к каталогу на уровень выше текущего и текущему каталогу, и файлы начинающиеся с точки;</li>
     <li><code>-l</code> — выводит информацию о содержимом каталога, включая права доступа, владельца, группу, размер, время создания, является ли файл символьной ссылкой на другой файл и на какой именно;</li>
     <li><code>-F</code> — добавляет символ в конце строк вывода: <code>/</code> — означает каталог, <code>@</code> — символьную ссылку на другой файл и <code>*</code> — означает, что файл является исполняемым;</li>
     <li><code>-r</code> — выводит список содержимого каталога в обратном порядке;</li>
@@ -9,6 +10,7 @@
     <li><code>-S</code> — сортирует файлы по размеру;</li>
     <li><code>-x</code> — вывод в 4 колонки;</li>
     <li><code>-t</code> — имена файлов сортируются не по алфавиту, а по времени последнего изменения;</li>
+    <li><code>-1</code> — построчно (для <code>ls -1 | xargs ...</code>).</li>
 </ul>
 <p><strong>Примеры</strong></p>
 <p><code>ls</code></p>
@@ -185,6 +187,7 @@ less -I -p void *.c					# Case insensitive search for "void" in all .c files</pr
 <p><code>rm -rf mydir</code> — рекурсивно удалить без подтверждения и кода ошибочного завершения файл (или директорию) mydir.</p>
 <p>Если файлов много, то с <var>xargs</var>: <code class="copyToClipboard">ls -1 /path/to/files/ | xargs -I rm /path/to/files/{}</code></p>
 <p>Если среди файлов есть такие, у которых имя начинается с точек, то в <var>ls</var> передаем параметр <var>A</var>: <code class="copyToClipboard">ls -A1 /path/to/files/ | xargs -I rm /path/to/files/{}</code></p>
+<p><code class="copyToClipboard">ls -A1 -I .gitignore -I temp ../frontend/web/assets | xargs -I {} rm -rf ../frontend/web/assets/{}</code> — рекурсивно удалить всё кроме файлов.</p>
 <h3>mv</h3>
 <ul>
     <li><code>–f</code>, не запрашивать подтверждения операций.</li>
