--- a/bash/all.html
+++ b/bash/all.html
@@ -322,6 +322,9 @@ $ scp ?
     <li>
         <p>Показать подробную информацию о доступных версиях пакета и о пакетах, от него зависящих (об обратных зависимостях пакета):</p> <pre> apt-cache showpkg <var>пакет</var></pre> </li>
 </ul>
+<h3>top</h3>
+<p><var class="copyToClipboard">top</var> (table of processes) — консольная команда, которая выводит список работающих в системе процессов и информации о них. По умолчанию она в реальном времени сортирует их по нагрузке на процессор.</p>
+<p><code class="copyToClipboard">htop</code></p>
 <h3>pwd</h3>
 <p>Вывести полный путь до текущей директории.</p>
 <p><strong>Примеры</strong></p>
